Improve UTF-8 tools